[tx] updated from transifex

--- a/l10n/es.json
+++ b/l10n/es.json
@@ -6,6 +6,7 @@
     "Redirect URI must not be empty" : "La URI de redirección no puede estar vacía",
     "Redirect URI must be a valid URL" : "La URI de redirección debe ser una URL válida",
     "Name %s already exists" : "El nombre %s ya existe",
+    "Cannot set localhost as trusted." : "No se puede configurar localhost como confiable.",
     "Client id must be a number" : "El ID de cliente debe ser un número",
     "The application was authorized successfully. You can now close this window." : "La aplicación ha sido autorizada,  ya puede cerrar esta ventana.",
     "Request not valid" : "Petición Inválida",
@@ -24,6 +25,7 @@
     "Client Identifier" : "Identificador del cliente",
     "Secret" : "Secreto",
     "Subdomains allowed" : "Subdominios permitidos",
+    "Trusted client" : "Cliente confiable",
     "Add client" : "Añadir cliente",
     "Allow subdomains" : "Permitir subdominios",
     "Add" : "Añadir",
