[tx] updated from transifex

--- a/l10n/de.json
+++ b/l10n/de.json
@@ -6,6 +6,7 @@
     "Redirect URI must not be empty" : "Redirect URI darf nicht leer sein",
     "Redirect URI must be a valid URL" : "Redirect URI muss eine valide URL sein",
     "Name %s already exists" : "Name %s existiert  bereits",
+    "Cannot set localhost as trusted." : "Localhost kann nicht als Vertrauenswürdig eingestuft werden",
     "Client id must be a number" : "Client id muss eine Nummer sein",
     "The application was authorized successfully. You can now close this window." : "Die Anwendung wurde erfolgreich autorisiert. Du kannst das Fenster nun schließen.",
     "Request not valid" : "Anfrage nicht gültig",
@@ -24,6 +25,7 @@
     "Client Identifier" : "Client ID",
     "Secret" : "Secret",
     "Subdomains allowed" : "Subdomains erlaubt",
+    "Trusted client" : "Vertrauenswürdiger Client",
     "Add client" : "Client hinzufügen",
     "Allow subdomains" : "Subdomains erlauben",
     "Add" : "Hinzufügen",
