--- a/l10n/it.json
+++ b/l10n/it.json
@@ -26,5 +26,5 @@
     "Are you sure you want to delete this item?" : "Sei sicuro di voler eliminare questo elemento?",
     "Switch user" : "Cambia utente",
     "You are logged in as %s but the application requested access for user %s." : "Sei connesso come %s ma l'applicazione chiede l'accesso per l'utente %s."
-},"pluralForm" :"nplurals=2; plural=(n != 1);"
+},"pluralForm" :"nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
