--- a/l10n/pt_BR.json
+++ b/l10n/pt_BR.json
@@ -34,5 +34,5 @@
     "Are you sure you want to delete this item?" : "Tem certeza de que deseja excluir este item?",
     "Switch user" : "Mudar de usuário",
     "You are logged in as %s but the application requested access for user %s." : "Você está logado como %s mas o aplicativo solicitou acesso para o usuário %s."
-},"pluralForm" :"nplurals=2; plural=(n > 1);"
+},"pluralForm" :"nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;"
 }
