[tx] updated from transifex

--- a/l10n/it.json
+++ b/l10n/it.json
@@ -18,6 +18,7 @@
     "Client Identifier" : "Identificatore client",
     "Secret" : "Segreto",
     "Subdomains allowed" : "Sottodomini consentiti",
+    "Trusted client" : "Client fidato",
     "Add client" : "Aggiungi client",
     "Allow subdomains" : "Consenti sottodomini",
     "Add" : "Aggiungi",
