--- a/l10n/tr.json
+++ b/l10n/tr.json
@@ -6,6 +6,7 @@
     "Redirect URI must not be empty" : "Yönlendırme URI'ı boş olmamalı",
     "Redirect URI must be a valid URL" : "Yönlendırme URI'ı geçerli bir URL olmalı",
     "Name %s already exists" : "%s ismi zaten mevcut",
+    "Cannot set localhost as trusted." : "Localhost güvenilir olarak ayarlanamıyor.",
     "Client id must be a number" : "İstemci kimliği bir sayı olmalıdır",
     "The application was authorized successfully. You can now close this window." : "Uygulama başarıyla yetkilendirildi. Şimdi bu pencereyi kapatabilirsiniz.",
     "Request not valid" : "İstek geçerli değil",
@@ -24,6 +25,7 @@
     "Client Identifier" : "İstemci Kimliği",
     "Secret" : "Parola",
     "Subdomains allowed" : "Alt alan adlarına izin verilmiştir",
+    "Trusted client" : "Güvenilir istemci",
     "Add client" : "İstemci ekle",
     "Allow subdomains" : "Alt alan adlarına izin ver",
     "Add" : "Ekle",
