[tx] updated from transifex

--- a/l10n/bg_BG.json
+++ b/l10n/bg_BG.json
@@ -25,7 +25,7 @@
     "Client Identifier" : "Идентификатор на клиента",
     "Secret" : "Тайна",
     "Subdomains allowed" : "Позволени поддомейни",
-    "Trusted client" : "Доверен клиент",
+    "Trusted client" : "Надежден клиент",
     "Add client" : "Добавяне на клиент",
     "Allow subdomains" : "Разрешаване на поддомейни",
     "Add" : "Добавяне",
