--- a/l10n/sq.json
+++ b/l10n/sq.json
@@ -1,11 +1,11 @@
 { "translations": {
-    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Aplikacioni \"{app}\" po kërkon hyrje në llogarinë tuaj. Që ta autorizoni, ju lutemi, së pari bëni hyrjen në të.",
+    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Aplikacioni “{app}” po kërkon hyrje në llogarinë tuaj. Që ta autorizoni, ju lutemi, së pari bëni hyrjen në të.",
     "Deleting..." : "Po fshihet…",
     "Saving..." : "Po ruhet …",
     "Name must not be empty" : "Emri s’duhet të jetë i zbrazët",
     "Redirect URI must not be empty" : "URI ridrejtimi s’duhet të jetë e zbrazët",
     "Redirect URI must be a valid URL" : "URI ridrejtimi duhet të jetë një URL e vlefshme",
-    "Name %s already exists" : "Ermi %s ekziston tashmë",
+    "Name %s already exists" : "Emri %s ekziston tashmë",
     "Cannot set localhost as trusted." : "S’ujdiset dot localhost-i si i besuar.",
     "Client id must be a number" : "ID-ja e klientit duhet të jetë një numër",
     "The application was authorized successfully. You can now close this window." : "Aplikacioni u autorizua me sukses. Tani mund ta mbyllni këtë dritare.",
