--- a/l10n/zh_HK.json
+++ b/l10n/zh_HK.json
@@ -1,37 +1,37 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "應用程式“ {app}”正在請求訪問您的帳號。 要對其進行授權，請先登入。",
-    "Deleting..." : "刪除中...",
+    "Deleting..." : "正在删除...",
     "Saving..." : "儲存中...",
-    "Name must not be empty" : "名稱不能為空",
-    "Redirect URI must not be empty" : "重定向URI不能為空",
-    "Redirect URI must be a valid URL" : "重定向URI必須是有效的超連結",
-    "Name %s already exists" : "名稱%s已經存在",
+    "Name must not be empty" : "名称不能为空",
+    "Redirect URI must not be empty" : "名称不能为空",
+    "Redirect URI must be a valid URL" : "重定向 URI 必须是有效的 URL",
+    "Name %s already exists" : "名称%s已存在",
     "Cannot set localhost as trusted." : "无法将 localhost 设置为受信任。",
-    "Client id must be a number" : "客戶端編號必須是數字",
+    "Client id must be a number" : "客户端 ID 必须是数字",
     "The application was authorized successfully. You can now close this window." : "該應用程式已成功授權。 您現在可以關閉此窗口。",
     "Request not valid" : "要求無效",
     "This request is not valid. Please contact the administrator if this error persists." : "此請求無效。如果此錯誤仍然存在，請與管理員聯繫。",
     "This request is not valid. Please contact the administrator of “%s” if this error persists." : "此請求無效。 請聯繫管理員“%s”如果此錯誤仍然存在。",
     "The “%s“ application would like permission to access your account" : "的“%s”應用程式想要訪問您的帳號的權限",
     "You are logged in as %s." : "您登錄為%s。",
-    "The application will gain access to your username and will be allowed to manage files, folders and shares." : "此應用程式將會得到您的帳號存取和允許管理檔案，資料夾和分享。",
-    "Authorize" : "驗證",
+    "The application will gain access to your username and will be allowed to manage files, folders and shares." : "该应用程序将访问您的用户名，并将被允许管理文件、文件夹和共享。",
+    "Authorize" : "授权",
     "Switch users to continue" : "切換用戶以繼續",
     "OAuth 2.0" : "OAuth 2.0",
-    "Registered clients" : "已註冊用戶",
-    "No clients registered." : "沒有用戶註冊。",
+    "Registered clients" : "已注册的客户端",
+    "No clients registered." : "没有已注册的客户端",
     "Name" : "名稱",
     "Redirection URI" : "URI重定向",
-    "Client Identifier" : "用戶身份",
-    "Secret" : "密鑰",
-    "Subdomains allowed" : "子網域已允許",
+    "Client Identifier" : "客户端标识符",
+    "Secret" : "密码",
+    "Subdomains allowed" : "允许子域名",
     "Trusted client" : "已信任的客户端",
-    "Add client" : "新增用戶",
-    "Allow subdomains" : "允許子網域",
-    "Add" : "增加",
-    "Authorized Applications" : "驗證應用程式",
-    "No applications authorized." : "沒有應用程式已驗證。",
-    "Are you sure you want to delete this item?" : "您確定要刪除這個項目嗎?",
+    "Add client" : "增加客户端",
+    "Allow subdomains" : "允许子域名",
+    "Add" : "新增",
+    "Authorized Applications" : "已授权的应用",
+    "No applications authorized." : "没有被授权的应用。",
+    "Are you sure you want to delete this item?" : "确定删除该项？",
     "Switch user" : "開關使用者",
     "You are logged in as %s but the application requested access for user %s." : "您登錄為%s但應用程式請求使用者訪問%s。"
 },"pluralForm" :"nplurals=1; plural=0;"
