[tx] updated from transifex

--- a/l10n/en_US.json
+++ b/l10n/en_US.json
@@ -23,6 +23,7 @@
     "Name" : "Name",
     "Redirection URI" : "Redirection URI",
     "Client Identifier" : "Client Identifier",
+    "Secret" : "Secret",
     "Subdomains allowed" : "Subdomains allowed",
     "Trusted client" : "Trusted client",
     "Add client" : "Add client",
