--- a/l10n/zh-Hans.json
+++ b/l10n/zh-Hans.json
@@ -20,6 +20,7 @@
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "已注册的客户端",
     "No clients registered." : "没有已注册的客户端",
+    "Name" : "名稱",
     "Redirection URI" : "URI重定向",
     "Client Identifier" : "客户端标识符",
     "Secret" : "密码",
